2003-01-23  Bruno Haible  <bruno@clisp.org>

	* format-c.c (get_c99_format_directives): Free the allocated
	descriptor after use.

2003-01-18  Bruno Haible  <bruno@clisp.org>

	* FILES: Update.

2003-01-12  Bruno Haible  <bruno@clisp.org>

	* msgconv.c: Include localcharset.h.
	(locale_charset): Remove declaration.
	* msginit.c: Include localcharset.h.
	(locale_charset): Remove declaration.
	* msgl-charset.c: Include localcharset.h.
	(locale_charset): Remove declaration.

2003-01-12  Bruno Haible  <bruno@clisp.org>

	* format-java.c: Include alloca.h instead of liballoca.h.
	* msggrep.c: Likewise.
	* msginit.c: Likewise.
	* msgl-cat.c: Likewise.
	* msgl-charset.c: Likewise.
	* msgl-iconv.c: Likewise.
	* msgmerge.c: Likewise.
	* po-charset.c: Likewise.
	* read-tcl.c: Likewise.
	* write-java.c: Likewise.
	* write-mo.c: Likewise.
	* write-po.c: Likewise.
	* write-tcl.c: Likewise.

2003-01-12  Bruno Haible  <bruno@clisp.org>

	* Makefile.am: Make use of += for variables.

2003-01-12  Bruno Haible  <bruno@clisp.org>

	* write-po.c (wrap): Add an assertion, to protect against Solaris 2.9
	iconv() bug.

2003-01-10  Bruno Haible  <bruno@clisp.org>

	* po-charset.c (po_lex_charset_set): Work around Solaris 2.9 iconv()
	bug.
	* write-po.c (wrap): Likewise.

2003-01-08  Bruno Haible  <bruno@clisp.org>

	* project-id: Make it work with configure files that use
	AM_INIT_AUTOMAKE from automake-1.7.2.

2002-12-04  Bruno Haible  <bruno@clisp.org>

	Fix handling of references to filenames starting with a digit.
	* po-hash-gen.y (last_was_colon): New variable.
	(yylex): Update it for each token. Recognize numbers only immediately
	after a colon.
	(po_hash): Move function. Initialize last_was_colon.
	Reported by Yanko Kaneti <yaneti@declera.com> and
	Jordi Mallach <jordi@sindominio.net>.

2002-11-22  Bruno Haible  <bruno@clisp.org>

	* msgexec.c (process_string): Change test of full_write return value.
	* msggrep.c (is_string_selected): Likewise.
	* urlget.c (cat_file): Likewise.
